# termcalc

./: CMakeLists.txt  README.md  termcalc.c
